Correct refunds scrolling on small screens

--- a/tutor/resources/styles/components/payments.less
+++ b/tutor/resources/styles/components/payments.less
@@ -45,8 +45,10 @@
 // TODO - make this a mixin or standard style once UX finishes style guide
 .modal.refund {
   @spacing: 40px;
-  top: 130px;
+  overflow: scroll;
+
   .modal-dialog {
+    margin-top: 130px;
     width: 500px;
   }
   .modal-content {
